Wed Aug 27 12:56:50 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_texinfo): Only require texinfo.tex in
	appropriate situations.  Report from Paul D. Smith.

Mon Aug 25 15:45:52 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (scan_dependency_file): Fix so that
	OMIT_DEPENDENCIES will work.  From Alexander Lukyanov.

	* automake.in (handle_texinfo): texi2dvi can generate `.cn'
	files.  From Akim Demaille.

Wed Aug  6 10:51:37 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_texinfo): Reversed sense of test.

Tue Aug  5 17:49:54 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_dependencies): Always mark OMIT_DEPENDENCIES
	as seen.

	* automake.in (handle_yacc_lex_cxx): Make each _.c file depend on
	ansi2knr.

	* automake.in (handle_yacc_lex_cxx): Fix for makes which don't
	allow $< in non-suffix rules.  From Akim Demaille.

	* automake.in (value_to_list): If variable name contains configure
	substitution, then just ignore it.

	* automake.in (variable_defined): Mark variable is seen, even if
	only conditionally seen.

	* Makefile.am: Check for bad splits.
	* automake.in (various): Use split(' ',...), not split(/ /,...).

Tue Aug  5 14:08:51 1997  Ian Lance Taylor  <ian@cygnus.com>

	* ylwrap: If the program is a relative path, force it to be
	absolute.

Tue Aug  5 16:59:41 1997  Tom Tromey  <tromey@cygnus.com>

	* missing: Examine A[CM]_CONFIG_HEADER for name of files to
	touch.  From Markus F.X.J. Oberhumer.

	* automake.in (require_file_internal): Better error message when
	installing.

	* automake.in (handle_texinfo): Smarter test when deleting output
	of makeinfo.

Sat Aug  2 13:32:45 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (do_check_merge_target): In --cygnus mode, check
	doesn't depend on all.

	* automake.in (output_yacc_build_rule): Use YACCFLAGS, not
	YFLAGS.  Per GNU Standards.

	* dejagnu.am (RUNTESTDEFAULTFLAGS): New macro.
	(check-DEJAGNU): Use it.
