@@ -378,7 +378,19 @@ sub write_aclocal
 
     open (ACLOCAL, "> aclocal.m4")
 	|| die "aclocal: couldn't open \`aclocal.m4' for writing: $!\n";
-    print ACLOCAL "dnl aclocal.m4 generated automatically by aclocal $VERSION\n\n";
+    print ACLOCAL "dnl aclocal.m4 generated automatically by aclocal $VERSION\n";
+    print ACLOCAL "\
+dnl Copyright (C) 1994, 1995, 1996, 1997 Free Software Foundation, Inc.
+dnl This Makefile.in is free software; the Free Software Foundation
+dnl gives unlimited permission to copy and/or distribute it,
+dnl with or without modifications, as long as this notice is preserved.
+
+dnl This program is distributed in the hope that it will be useful,
+dnl but WITHOUT ANY WARRANTY, to the extent permitted by law; without
+dnl even the implied warranty of MERCHANTABILITY or FITNESS FOR A
+dnl PARTICULAR PURPOSE.
+
+";
     print ACLOCAL $output;
     close (ACLOCAL);
 }
