@@ -1,5 +1,10 @@
 Wed Aug 27 12:56:50 1997  Tom Tromey  <tromey@cygnus.com>
 
+	* aclocal.in (write_aclocal): Print copyright and copying
+	permissions.  From RMS.
+	* automake.in (initialize_global_constants): More copyright stuff
+	from RMS.
+
 	* automake.in (handle_texinfo): Only require texinfo.tex in
 	appropriate situations.  Report from Paul D. Smith.
 
